build: for JDK11